--- a/views/user/Login.hbs
+++ b/views/user/Login.hbs
@@ -10,9 +10,9 @@
     {{> userNav}}
     <div class="login-page" style="margin-top: 10%;">
   <div class="form">
-    <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
+    <form class="login-form" action="/Login" method="post">
+      <input type="text" name="email" placeholder="username"/>
+      <input type="password" name="password" placeholder="password"/>
       <button>login</button>
       <p class="message">Not registered? <a href="/Register">Create an account</a></p>
       <p class="message">back to Home<a href="/">Home</a></p>
