--- a/views/user/Booknow.hbs
+++ b/views/user/Booknow.hbs
@@ -40,6 +40,7 @@
                                 <input type="hidden" value="{{availableSeat}}" name="availableSeat">
                                 <input type="hidden" value="{{_id}}" name="jurneyId">
                                 <input type="hidden" name="rate" value="{{rate}}">
+                                 <input type="hidden" name="employee" value="{{employee}}">
                                 <input type="submit" value="Book NOw" class="booknow">
                             </form>
                             
