--- a/views/index.hbs
+++ b/views/index.hbs
@@ -40,25 +40,17 @@ https://templatemo.com/tm-535-softy-pinko
         <!-- ***** Header Text Start ***** -->
         <div class="header-text">
             <div class="container">
-                 <a href="/Login" class="main-button-slider">Register</a>
+                <a href="/Login" class="main-button-slider">Register</a>
                          <a href="/users/Login" class="main-button-slider">Employee</a>
                 <div class="row">
                     <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
-<<<<<<< HEAD
-                        <h1>We provide the best <strong>strategy</strong><br>to grow up your <strong>business</strong></h1>
-                        <p>Softy Pinko is a professional Bootstrap 4.0 theme designed by Template Mo 
-                        for your company at absolutely free of charge</p>
-                       
-=======
                         <h1>Ferry Management <strong>System</strong></h1>
-                        <p>As the Ferry industry renews its fleet with more efficient, environmentally responsible vessels, V.Ships Leisure, a part of V.Group, is providing ever more services to the industry.</p>
-                        <a href="/Login" class="main-button-slider">Register</a>
-                         <a href="/users/Login" class="main-button-slider">Employee</a>
->>>>>>> 84b5dfe9d8be3da98fd0b30a84587642677467a0
+                        <p>As the Ferry industry renews its fleet with more efficient, environmentally responsible.</p>
+                        
                     </div>
                 </div>
             </div>
-        </div>
+        </div><br><br>
         <!-- ***** Header Text End ***** -->
     </div>
     <!-- ***** Welcome Area End ***** -->
@@ -513,18 +505,14 @@ Today Ross island is under Indian Naval Force and tourist are permitted to visit
                 <!-- ***** Contact Form Start ***** -->
                 <div class="col-lg-8 col-md-6 col-sm-12">
                     <div class="contact-form">
-                        <form id="contact" action="" method="get">
+                        <form id="contact" action="/sentMail" method="post">
                           <div class="row">
                             <div class="col-lg-6 col-md-12 col-sm-12">
                               <fieldset>
-                                <input name="name" type="text" class="form-control" id="name" placeholder="Full Name" required="">
+                                <input name="feedabcak" type="text" class="form-control" id="name" placeholder=" feeedback" required="">
                               </fieldset>
                             </div>
-                            <div class="col-lg-6 col-md-12 col-sm-12">
-                              <fieldset>
-                                <input name="email" type="email" class="form-control" id="email" placeholder="E-Mail Address" required="">
-                              </fieldset>
-                            </div>
+                            
                             {{!-- <div class="col-lg-12">
                               <fieldset>
                                 <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your Message" required=""></textarea>
@@ -532,7 +520,7 @@ Today Ross island is under Indian Naval Force and tourist are permitted to visit
                             </div> --}}
                             <div class="col-lg-12">
                               <fieldset>
-                                <button type="submit" id="form-submit" class="main-button">Send Message</button>
+                                <button type="submit" id="form-submit" class="main-button">Compliants and feedbacks</button>
                               </fieldset>
                             </div>
                           </div>
