--- a/views/admin/Login.hbs
+++ b/views/admin/Login.hbs
@@ -9,12 +9,11 @@
 <body>
     <div class="login-page">
   <div class="form">
-    <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
+    <form class="login-form" action="/admin/login" method="post">
+      <input type="text" name="name" placeholder="username"/>
+      <input type="password" name="password" placeholder="password"/>
       <button>login</button>
-      <p class="message">Not registered? <a href="/Register">Create an account</a></p>
-      <p class="message">back to Home<a href="/">Home</a></p>
+
     </form>
   </div>
 </div> 
