--- a/views/employee/home.hbs
+++ b/views/employee/home.hbs
@@ -21,13 +21,23 @@ table {
 th, td {
   padding: 15px;
 }
+.top{
+  width: 60%;
+  height: 100px;
+  background-color: #ddd;
+  margin: auto;
+}
 </style>
 </head>
 <body>
     {{>empNav}}
 
 
-    
+    <div class="top">
+      <h2 class="heading" style="text-align: center;margin-top:10px; color:white;" id="showdata"> KNOW WHERE YOU ARE</h2>
+   
+   <button class="gioBtn"  id="gio">Detect your location</button> 
+    </div>
 
   
    <table>
@@ -36,6 +46,7 @@ th, td {
     <th>UserName</th>
     <th>Payment</th>
     <th>Payement Status</th>
+     <th>Upadate Status</th>
   </tr>
   {{#each bookings}}
   <tr>
@@ -43,6 +54,14 @@ th, td {
     <td>{{userName}}</td>
     <td>{{payment}}</td>
     <td>{{status}}</td>
+    <td>
+        <form action="/users/location_add" method="post">
+          <input type="text"  name="lati" id="lati">
+          <input type="text"  id="longti" name="longti">
+          <input type="hidden"  name="id" value="{{_id}}">
+          <input type="submit" value="update Location">
+        </form>
+    </td>
   </tr>
 {{/each}}
 </table>
@@ -50,5 +69,63 @@ th, td {
 
   
 </div>
+
+
+<script>
+      const button = document.getElementById("gio");
+    var locationDetail;
+button.addEventListener("click", ()=>{
+    if(navigator.geolocation){
+        button.innerText = "Allow gmap to detect location";
+        navigator.geolocation.getCurrentPosition(onSuccess, onError);
+    }else{
+        button.innerText = "Your browser not support";
+    }
+});
+function onSuccess(position){
+      var locationData = document.getElementById('showdata');
+    locationData.innerText = "Detecting your location...";
+    let {latitude, longitude} = position.coords;
+    console.log(latitude);
+    document.getElementById("lati").value =latitude ;
+    document.getElementById("longti").value =latitude ;
+    console.log(longitude);
+    console.log("----------------this is position")
+    //8bb9d1ee2d9743e29d3f1216c002b2f4
+    fetch(`https://api.opencagedata.com/geocode/v1/json?q=${latitude}+${longitude}&key=8cd8f366fda24ba2a495b8520900cc49`)
+    .then(response => response.json()).then(response =>{
+        let allDetails = response.results[0].components;
+        console.table(allDetails);
+        let {suburb, postcode, city} = allDetails;
+        locationDetail =allDetails;
+        locationData.innerText = `${suburb} ${postcode}, ${city}`;
+    }).catch(()=>{
+        button.innerText = "Something went wrong";
+    });
+}
+function onError(error){
+    if(error.code == 1){
+        button.innerText = "You denied the request";
+    }else if(error.code == 2){
+        button.innerText = "Location is unavailable";
+    }else{
+        button.innerText = "Something went wrong";
+    }
+    button.setAttribute("disabled", "true");
+}
+function SearchStation(){
+    console.log("clikced")
+    let locationData;
+    $.post("/users/search-station",
+         data={
+           locationDetail
+         },(data,status)=>{
+            console.log(data)
+            if(data){
+                location.href='/users/searchResult'
+            }
+         });
+}
+</script>
 </body>
 </html>
