--- a/views/partials/adminNav.hbs
+++ b/views/partials/adminNav.hbs
@@ -20,91 +20,24 @@
 <body>
      <a href="#">
                                         <i class="metismenu-icon pe-7s-car"></i>
-                                        Components
+                                        Complaints
                                         <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                                     </a>
-                                    <ul
-                                        
-                                        
-                                        
-                                        
-                                        
-                                        
-                                        
-                                        
-                                        
-                                        
-                                        
-                                    >
+                                     <a href="/admin/logout">
+                                        <i class="metismenu-icon pe-7s-car"></i>
+                                        Logout
+                                        <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
+                                    </a>
+                                    <ul>
                                         <li>
-                                            <a href="components-tabs.html">
+                                            <a href="/admin/logout">
                                                 <i class="metismenu-icon">
-                                                </i>Tabs
+                                                </i>Logout
                                             </a>
                                         </li>
-                                        <li>
-                                            <a href="components-accordions.html">
-                                                <i class="metismenu-icon">
-                                                </i>Accordions
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="components-notifications.html">
-                                                <i class="metismenu-icon">
-                                                </i>Notifications
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="components-modals.html">
-                                                <i class="metismenu-icon">
-                                                </i>Modals
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="components-progress-bar.html">
-                                                <i class="metismenu-icon">
-                                                </i>Progress Bar
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="components-tooltips-popovers.html">
-                                                <i class="metismenu-icon">
-                                                </i>Tooltips &amp; Popovers
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="components-carousel.html">
-                                                <i class="metismenu-icon">
-                                                </i>Carousel
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="components-calendar.html">
-                                                <i class="metismenu-icon">
-                                                </i>Calendar
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="components-pagination.html">
-                                                <i class="metismenu-icon">
-                                                </i>Pagination
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="components-scrollable-elements.html">
-                                                <i class="metismenu-icon">
-                                                </i>Scrollable
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="components-maps.html">
-                                                <i class="metismenu-icon">
-                                                </i>Maps
-                                            </a>
-                                        </li>
-                                    </ul>
+                                       
                                 </li>
-                                <li  >
+                                {{!-- <li  >
                                     <a href="tables-regular.html">
                                         <i class="metismenu-icon pe-7s-display2"></i>
                                         Tables
@@ -150,7 +83,7 @@
                                         </i>
                                         Upgrade to PRO
                                     </a>
-                                </li>
+                                </li> --}}
                             </ul>
                         </div>
                     </div>
