--- a/views/partials/empNav.hbs
+++ b/views/partials/empNav.hbs
@@ -184,23 +184,16 @@ i {
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
+    
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);"><i class="fas fa-tachometer-alt"></i>Dashboard</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="javascript:void(0);"><i class="far fa-address-book"></i>view Booking</a>
+                    <a class="nav-link" href="/users/home"><i class="far fa-clone"></i>View Booking</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);"><i class="far fa-clone"></i>View Booking</a>
+                    <a class="nav-link" href="/users/profile" ><i class="far fa-calendar-alt"></i>profile</a>
                 </li>
+                
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);"><i class="far fa-calendar-alt"></i>Calendar</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Charts</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);"><i class="far fa-copy"></i>Logout</a>
+                    <a class="nav-link" href="/users/logout"><i class="far fa-copy"></i>Logout</a>
                 </li>
             </ul>
         </div>
