--- a/views/partials/userNav.hbs
+++ b/views/partials/userNav.hbs
@@ -63,7 +63,7 @@
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="#" class="logo">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrFRdrvQAohNH8ZXXJmiCUoM3KpKIZgAFOLQ&usqp=CAU" alt="Softy Pinko"/>
+                            {{!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrFRdrvQAohNH8ZXXJmiCUoM3KpKIZgAFOLQ&usqp=CAU" alt="Softy Pinko"/> --}}
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
@@ -77,6 +77,9 @@
                             {{/if}}
                             {{#if user}}
                              <li><a href="#pricing-plans">{{user.userName}}</a></li>
+                             {{/if}}
+                             {{#if user}}
+                             <li><a href="/map">View Map</a></li>
                              {{/if}}
                             <li><a href="/logout">Logout</a></li>
 
